Fix main content overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,10 @@ h6 {
   margin: 0 auto;
 }
 
+.main-content {
+  overflow: hidden;
+}
+
 // Copyright (c) attributes
 .attribution {
   font-size: 11px;
@@ -75,7 +79,7 @@ h6 {
 
 // Start header styles
 .header {
-  position: relative;
+  // position: relative;
   background: #fff;
   padding: 1.3rem 1rem;
   z-index: 9999;
